Update Project CHD prediction using Logistic Regression.ipynb

--- a/Project CHD prediction using Logistic Regression.ipynb
+++ b/Project CHD prediction using Logistic Regression.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "The classification goal is to predict whether the patient has 10-year risk of future coronary heart disease (CHD).\n",
     "\n",
-    "The datasets consists of  both demographic, behavioral and medical risk predictor variables and one target variable, TenYearCHD. Predictor variables includes the number of current smoker, person taking cigarettes per day,their BMI, total cholestrol,heart rate, age, and so on.\n",
+    "The dataset consists of  both demographic, behavioral and medical risk predictor variables and one target variable, TenYearCHD. Predictor variables includes the number of current smoker, person taking cigarettes per day,their BMI, total cholestrol,heart rate, age, and so on.\n",
     "\n",
     "The dataset is from an ongoing cardiovascular study on residents of the town of Framingham, Massachusetts. "
    ]
