Update Project CHD prediction using Logistic Regression.ipynb

--- a/Project CHD prediction using Logistic Regression.ipynb
+++ b/Project CHD prediction using Logistic Regression.ipynb
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -215,6 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -293,6 +302,20 @@
    ],
    "source": [
     "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Removed NaN values**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Observing Data Distribution"
    ]
   },
   {
@@ -417,6 +440,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observing Outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dividing data into Features and Target"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -427,13 +464,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SCALING**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scalar = StandardScaler()\n",
-    "X_scaled = scalar.fit_transform(X)"
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)"
    ]
   },
   {
@@ -886,6 +930,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training & Testing "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -942,7 +1000,7 @@
     }
    ],
    "source": [
-    "accuracy = accuracy_score(y_test,y_pred)\n",
+    "accuracy = accuracy_score(y_test,y_pred)   #Accuracy = (TP+TN)/(TP+FP+TN+FN)\n",
     "accuracy"
    ]
   },
@@ -964,7 +1022,7 @@
     }
    ],
    "source": [
-    "conf_mat = confusion_matrix(y_test,y_pred)\n",
+    "conf_mat = confusion_matrix(y_test,y_pred)    \n",
     "conf_mat"
    ]
   },
@@ -1099,7 +1157,7 @@
     }
    ],
    "source": [
-    "# Area Under Curve\n",
+    "# Area Under Curve (AUC is used to determine which model is the best one to use for a given dataset.)\n",
     "auc = roc_auc_score(y_test, y_pred)\n",
     "auc"
    ]
